# op-up

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  Makefile  README.md  bootstrap.sh  stack.toml
.github/workflows/: audit.yml  ci.yml  cross-release.yml  github-release.yml  manual-tag.yml  release.yml  tag.yml  validate-version.yml
cli/: Cargo.toml
cli/src/: constants.rs  genesis.rs  items.rs  main.rs  utils.rs
cli/src/stack/: challenger_agent.rs  l1_client.rs  l2_client.rs  mod.rs  rollup_client.rs
crates/composer/: Cargo.toml
crates/composer/src/: build_context.rs  lib.rs  utils.rs
crates/composer/tests/: basic.rs
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs  optional.rs  rename.rs  root.rs  stack.rs  stage.rs  toml.rs  unwraps.rs  wraps.rs
crates/config/src/providers/: mod.rs  optional.rs  toml.rs  unwraps.rs
crates/config/src/stages/: mod.rs
crates/config/tests/: config.rs  stack.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs  manager.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: artifacts.rs  genesis.rs  lib.rs  monorepo.rs
crates/primitives/src/components/: challenger.rs  layer_one.rs  layer_two.rs  mod.rs  rollup.rs
crates/primitives/src/monorepo/: mod.rs
crates/stack/: Cargo.toml
crates/stack/src/: lib.rs
crates/stack/src/components/: challenger.rs  layer_one.rs  layer_two.rs  rollup.rs
crates/stages/: Cargo.toml
crates/stages/src/: commands.rs  git.rs  json.rs  lib.rs  net.rs  stages.rs
crates/stages/src/stages/: allocs.rs  artifacts.rs  batcher.rs  cannon.rs  challenger.rs  contracts.rs  deploy_config.rs  directories.rs  l1_exec.rs  l1_genesis.rs  l2_exec.rs  l2_genesis.rs  layer_two.rs  prestate.rs  proposer.rs  rollup.rs  stateviz.rs
docker/: Dockerfile.challenger-op-challenger-go  Dockerfile.challenger-op-challenger-rust  Dockerfile.l1-erigon  Dockerfile.l1-geth  Dockerfile.op-node  Dockerfile.rollup-magi  Dockerfile.rollup-op-node  Dockerfile.stateviz  devnet-up.sh  docker-compose.yml  geth-entrypoint.sh  magi-entrypoint.sh  op-challenger-go-entrypoint.sh  op-challenger-rust-entrypoint.sh  op-node-entrypoint.sh
docs/components/: components.md
docs/developers/: troubleshooting.md
ops/devnet_state/: rollup.json  set_timestamp.sh
ops/docker/: Dockerfile.l1_geth  Dockerfile.l2_op_geth  devnet-up.sh  docker-compose.yml
