[workspace]
members = ["bin/opup", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["merklefruit", "refcell"]
rust-version = "1.72"
homepage = "https://github.com/anton-rs/op-up"
repository = "https://github.com/anton-rs/op-up"
exclude = ["benches/", "tests/", "test-data/", "testdata/"]

[workspace.dependencies]
## async
async-trait = "0.1.68"
futures = "0.3.26"
pin-project = "1.0.12"
futures-util = "0.3.25"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.bench]
debug = true
