[workspace]
members = ["bin/opup", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["merklefruit", "refcell"]
rust-version = "1.72"
homepage = "https://github.com/anton-rs/op-up"
repository = "https://github.com/anton-rs/op-up"
exclude = ["benches/", "tests/", "test-data/", "testdata/"]

[workspace.dependencies]
## async
async-trait = "0.1.68"
futures = "0.3.26"
pin-project = "1.0.12"
futures-util = "0.3.25"

## cli
inquire = "0.6.2"

## telemetry
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

## errors
eyre = "0.6.8"

## serialization
enum-variants-strings = "0.2.3"
strum = { version = "0.25", features = ["derive"] }
serde = "1.0.163"
serde_json = "1.0.96"

## other
once_cell = "1.18.0"
hex-literal = "0.4.1"
ethers-core = { version = "2.0" }


[profile.dev]
opt-level = 1
overflow-checks = false

[profile.bench]
debug = true
