[package]
name = "op-composer"
description = "A Docker container orchestration tool for OP stack components"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
eyre.workspace = true
tracing.workspace = true

bollard = "0.15.0"
tokio = { version = "1.11.0", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1"
