[package]
name = "op-config"
description = "An extensible OP Stack configuration file"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
op-primitives = { path = "../primitives" }

strum.workspace = true
inquire.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_regex.workspace = true
enum-variants-strings.workspace = true

eyre.workspace = true
tracing.workspace = true

hex-literal.workspace = true
once_cell.workspace = true

Inflector = "0.11.4"
figment = { version = "0.10", features = ["toml", "env"] }
toml = { version = "0.8.1", features = ["preserve_order"] }
toml_edit = "0.20.1"
dirs-next = "2"

[dev-dependencies]
pretty_assertions = "1"
figment = { version = "0.10", features = ["test"] }
tempfile = "3"
