[package]
name = "op-contracts"
description = "OP Stack contract management"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
strum.workspace = true
inquire.workspace = true
serde.workspace = true
serde_json.workspace = true
enum-variants-strings.workspace = true

eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

ethers-core.workspace = true

hex-literal.workspace = true
once_cell.workspace = true
