[package]
name = "op-stack"
description = "stack primitives"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

strum.workspace = true
inquire.workspace = true
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
enum-variants-strings.workspace = true

ethers-core = { version = "2.0" }
hex-literal = "0.4.1"
once_cell = "1.18.0"
