[package]
name = "op-stages"
description = "Composable Rollup Stages"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
op-contracts = { path = "../contracts" }
op-config = { path = "../config" }
op-primitives = { path = "../primitives" }

eyre.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

project-root = "0.2.2"
