[package]
name = "op-stages"
description = "Composable Rollup Stages"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
op-composer = { path = "../composer" }
op-contracts = { path = "../contracts" }
op-config = { path = "../config" }
op-primitives = { path = "../primitives" }

eyre.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

async-trait = "0.1.73"
project-root = "0.2.2"
