[package]
name = "op-stages"
description = "Composable Rollup Stages"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
op-composer = { version = "0.1.0", path = "../composer" }
op-contracts = { version = "0.1.0", path = "../contracts" }
op-config = { version = "0.1.0", path = "../config" }
op-primitives = { version = "0.1.0", path = "../primitives" }

eyre.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

async-trait = "0.1"
project-root = "0.2"
maplit = "1.0"
